go back to seq builder