@@ -93,10 +93,12 @@ public class CorrectSVs {
 		{
 			return "";
 		}
-        
+
 		String faidxCommand = String.format("%s faidx %s %s:%d-%d", SAMTOOLS_PATH, refFn, chr, startPos, endPos);
-		Process child = Runtime.getRuntime().exec(faidxCommand);
-		InputStream seqStream = child.getInputStream();
+		ProcessBuilder processBuilder = new ProcessBuilder(faidxCommand.split(" "));
+		Process process = processBuilder.start();
+
+		InputStream seqStream = process.getInputStream();
 		Scanner seqInput = new Scanner(seqStream);
 
 		// Make sure it produced an actual output
